# crypto-speedtest

./: .gitignore  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.ac
results/: Makefile.am  Makefile.in  README  distrospeed.gnuplot  sidebyside-comparison-4x2.tex  speedtest.gnuplot
results/cel-2660-debian-etch/: beecrypt-blowfish-ecb.txt  beecrypt-rijndael-ecb.txt  botan-3des-ecb.txt  botan-blowfish-ecb.txt  botan-cast5-ecb.txt  botan-cast6-ecb.txt  botan-gost-ecb.txt  botan-rijndael-ecb.txt  botan-serpent-ecb.txt  botan-twofish-ecb.txt  botan-xtea-ecb.txt  cryptopp-3des-ecb.txt  cryptopp-blowfish-ecb.txt  cryptopp-cast5-ecb.txt  cryptopp-cast6-ecb.txt  cryptopp-gost-ecb.txt  cryptopp-rijndael-ecb.txt  cryptopp-serpent-ecb.txt  cryptopp-twofish-ecb.txt  cryptopp-xtea-ecb.txt  gcrypt-3des-ecb.txt  gcrypt-blowfish-ecb.txt  gcrypt-cast5-ecb.txt  gcrypt-rijndael-ecb.txt  gcrypt-serpent-ecb.txt  gcrypt-twofish-ecb.txt  gladman-serpent-ecb.txt  mcrypt-3des-ecb.txt  mcrypt-blowfish-ecb.txt  mcrypt-cast5-ecb.txt  mcrypt-cast6-ecb.txt  mcrypt-gost-ecb.txt  mcrypt-loki97-ecb.txt  mcrypt-rijndael-ecb.txt  mcrypt-saferplus-ecb.txt  mcrypt-serpent-ecb.txt  mcrypt-twofish-ecb.txt  mcrypt-xtea-ecb.txt  my-rijndael-ecb.txt  mybotan-serpent-ecb.txt  (+21 more)
results/cel-850-debian-etch/: beecrypt-blowfish-ecb.txt  beecrypt-rijndael-ecb.txt  botan-3des-ecb.txt  botan-blowfish-ecb.txt  botan-cast5-ecb.txt  botan-cast6-ecb.txt  botan-gost-ecb.txt  botan-rijndael-ecb.txt  botan-serpent-ecb.txt  botan-twofish-ecb.txt  botan-xtea-ecb.txt  cryptopp-3des-ecb.txt  cryptopp-blowfish-ecb.txt  cryptopp-cast5-ecb.txt  cryptopp-cast6-ecb.txt  cryptopp-gost-ecb.txt  cryptopp-rijndael-ecb.txt  cryptopp-serpent-ecb.txt  cryptopp-twofish-ecb.txt  cryptopp-xtea-ecb.txt  gcrypt-3des-ecb.txt  gcrypt-blowfish-ecb.txt  gcrypt-cast5-ecb.txt  gcrypt-rijndael-ecb.txt  gcrypt-serpent-ecb.txt  gcrypt-twofish-ecb.txt  gladman-serpent-ecb.txt  mcrypt-3des-ecb.txt  mcrypt-blowfish-ecb.txt  mcrypt-cast5-ecb.txt  mcrypt-cast6-ecb.txt  mcrypt-gost-ecb.txt  mcrypt-loki97-ecb.txt  mcrypt-rijndael-ecb.txt  mcrypt-saferplus-ecb.txt  mcrypt-serpent-ecb.txt  mcrypt-twofish-ecb.txt  mcrypt-xtea-ecb.txt  my-rijndael-ecb.txt  mybotan-serpent-ecb.txt  (+21 more)
results/p2-300-debian-etch/: beecrypt-blowfish-ecb.txt  beecrypt-rijndael-ecb.txt  botan-3des-ecb.txt  botan-blowfish-ecb.txt  botan-cast5-ecb.txt  botan-cast6-ecb.txt  botan-gost-ecb.txt  botan-rijndael-ecb.txt  botan-serpent-ecb.txt  botan-twofish-ecb.txt  botan-xtea-ecb.txt  cryptopp-3des-ecb.txt  cryptopp-blowfish-ecb.txt  cryptopp-cast5-ecb.txt  cryptopp-cast6-ecb.txt  cryptopp-gost-ecb.txt  cryptopp-rijndael-ecb.txt  cryptopp-serpent-ecb.txt  cryptopp-twofish-ecb.txt  cryptopp-xtea-ecb.txt  gcrypt-3des-ecb.txt  gcrypt-blowfish-ecb.txt  gcrypt-cast5-ecb.txt  gcrypt-rijndael-ecb.txt  gcrypt-serpent-ecb.txt  gcrypt-twofish-ecb.txt  gladman-serpent-ecb.txt  mcrypt-3des-ecb.txt  mcrypt-blowfish-ecb.txt  mcrypt-cast5-ecb.txt  mcrypt-cast6-ecb.txt  mcrypt-gost-ecb.txt  mcrypt-loki97-ecb.txt  mcrypt-rijndael-ecb.txt  mcrypt-saferplus-ecb.txt  mcrypt-serpent-ecb.txt  mcrypt-twofish-ecb.txt  mcrypt-xtea-ecb.txt  my-rijndael-ecb.txt  mybotan-serpent-ecb.txt  (+21 more)
results/p3-1000-ubuntu-gutsy/: beecrypt-blowfish-ecb.txt  beecrypt-rijndael-ecb.txt  botan-3des-ecb.txt  botan-blowfish-ecb.txt  botan-cast5-ecb.txt  botan-cast6-ecb.txt  botan-gost-ecb.txt  botan-rijndael-ecb.txt  botan-serpent-ecb.txt  botan-twofish-ecb.txt  botan-xtea-ecb.txt  cryptopp-3des-ecb.txt  cryptopp-blowfish-ecb.txt  cryptopp-cast5-ecb.txt  cryptopp-cast6-ecb.txt  cryptopp-gost-ecb.txt  cryptopp-rijndael-ecb.txt  cryptopp-serpent-ecb.txt  cryptopp-twofish-ecb.txt  cryptopp-xtea-ecb.txt  gcrypt-3des-ecb.txt  gcrypt-blowfish-ecb.txt  gcrypt-cast5-ecb.txt  gcrypt-rijndael-ecb.txt  gcrypt-serpent-ecb.txt  gcrypt-twofish-ecb.txt  gladman-serpent-ecb.txt  mcrypt-3des-ecb.txt  mcrypt-blowfish-ecb.txt  mcrypt-cast5-ecb.txt  mcrypt-cast6-ecb.txt  mcrypt-gost-ecb.txt  mcrypt-loki97-ecb.txt  mcrypt-rijndael-ecb.txt  mcrypt-saferplus-ecb.txt  mcrypt-serpent-ecb.txt  mcrypt-twofish-ecb.txt  mcrypt-xtea-ecb.txt  my-rijndael-ecb.txt  mybotan-serpent-ecb.txt  (+21 more)
results/p4-3200-debian-etch/: beecrypt-blowfish-ecb.txt  beecrypt-rijndael-ecb.txt  botan-3des-ecb.txt  botan-blowfish-ecb.txt  botan-cast5-ecb.txt  botan-cast6-ecb.txt  botan-gost-ecb.txt  botan-rijndael-ecb.txt  botan-serpent-ecb.txt  botan-twofish-ecb.txt  botan-xtea-ecb.txt  cryptopp-3des-ecb.txt  cryptopp-blowfish-ecb.txt  cryptopp-cast5-ecb.txt  cryptopp-cast6-ecb.txt  cryptopp-gost-ecb.txt  cryptopp-rijndael-ecb.txt  cryptopp-serpent-ecb.txt  cryptopp-twofish-ecb.txt  cryptopp-xtea-ecb.txt  gcrypt-3des-ecb.txt  gcrypt-blowfish-ecb.txt  gcrypt-cast5-ecb.txt  gcrypt-rijndael-ecb.txt  gcrypt-serpent-ecb.txt  gcrypt-twofish-ecb.txt  gladman-serpent-ecb.txt  mcrypt-3des-ecb.txt  mcrypt-blowfish-ecb.txt  mcrypt-cast5-ecb.txt  mcrypt-cast6-ecb.txt  mcrypt-gost-ecb.txt  mcrypt-loki97-ecb.txt  mcrypt-rijndael-ecb.txt  mcrypt-saferplus-ecb.txt  mcrypt-serpent-ecb.txt  mcrypt-twofish-ecb.txt  mcrypt-xtea-ecb.txt  my-rijndael-ecb.txt  mybotan-serpent-ecb.txt  (+21 more)
results/p4-3200-debian-lenny/: beecrypt-blowfish-ecb.txt  beecrypt-rijndael-ecb.txt  botan-3des-ecb.txt  botan-blowfish-ecb.txt  botan-cast5-ecb.txt  botan-cast6-ecb.txt  botan-gost-ecb.txt  botan-rijndael-ecb.txt  botan-serpent-ecb.txt  botan-twofish-ecb.txt  botan-xtea-ecb.txt  cryptopp-3des-ecb.txt  cryptopp-blowfish-ecb.txt  cryptopp-cast5-ecb.txt  cryptopp-cast6-ecb.txt  cryptopp-gost-ecb.txt  cryptopp-rijndael-ecb.txt  cryptopp-serpent-ecb.txt  cryptopp-twofish-ecb.txt  cryptopp-xtea-ecb.txt  gcrypt-3des-ecb.txt  (+40 more)
src/: .gitignore  Makefile.am  Makefile.in  rijndael.cpp  rijndael.h  serpent-gladman.cpp  serpent-gladman.h  serpent.cpp  serpent.h  speedtest.cpp  speedtest.gnuplot  speedtest.h  speedtest_beecrypt.cpp  speedtest_botan.cpp  speedtest_cryptopp.cpp  speedtest_custom.cpp  speedtest_gcrypt.cpp  speedtest_mcrypt.cpp  speedtest_nettle.cpp  speedtest_openssl.cpp  speedtest_tomcrypt.cpp  verify.cpp
(+186 files in other folders)
